<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme">

    <LinearLayout
        android:id="@+id/OcultaXML"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ImagenOriginal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:contentDescription="@string/imagenSeleccionada" />

        <EditText
            android:id="@+id/TextoAOcultar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:hint="@string/textoAOcultar"
            android:textColorHint="@color/letraNormal"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Pass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/pass1"
            android:maxLength="16"
            android:textColorHint="@color/letraNormal"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!--
        <EditText
            android:id="@+id/Pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass2"
            android:maxLength="16"
            android:textColorHint="@color/letraNormal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <EditText
            android:id="@+id/Pass3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass3"
            android:maxLength="16"
            android:textColorHint="@color/letraNormal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />
        -->

        <Button
            android:id="@+id/BotonOcultar"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:text="@string/botonOcultar"
            android:textColor="@color/letraBoton"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/BotonGuardar"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:text="@string/botonGuardar"
            android:textColor="@color/letraBoton"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>