<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo">

    <LinearLayout
        android:id="@+id/DescubreXML"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ImagenOriginal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:contentDescription="@string/imagenSeleccionada" />

        <TextView
            android:id="@+id/TextoOculto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:textColor="@color/letraNormal"
            android:textColorHint="@color/letraNormal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <EditText
            android:id="@+id/Pass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/pass1"
            android:maxLength="8"
            android:textColor="@color/letraNormal"
            android:textColorHint="@color/letraNormal"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/BotonDescubrir"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dip"
            android:clickable="true"
            android:text="@string/botonDescubrir"
            android:textColor="@color/letraBoton"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>